--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   "author": "bjorn.spara@softwarecensus.se",
   "license": "Apache-2.0",
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "0.21.0"
   }
 }
